--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,12 @@ PyMuPDF==1.25.5
 scikit-learn>=1.0.0
 numpy>=1.20.0
 pandas>=1.3.0
+requests==2.31.0
+faiss-cpu
+sentence-transformers==2.2.2
+huggingface-hub==0.16.4
+pytesseract==0.3.10
+Pillow==10.2.0
+camelot-py[cv]==0.11.0
+tqdm==4.66.2
+nltk==3.8.1
